add new post: BLIP2

--- a/content/posts/papers/2023-05-22-BLIP.md
+++ b/content/posts/papers/2023-05-22-BLIP.md
@@ -2,7 +2,7 @@
 title: "BLIP: Bootstrapping Language-Image Pre-training for Unified Vision-Language Understanding and Generation"
 date: 2023-05-22T14:37:57+08:00
 categories: [paper]
-tags: [BLIP, "Vision-Language model", "pre-training"]
+tags: [BLIP, "Vision-Language model", "pre-training", "multi-task"]
 ---
 
 1. Title: BLIP: 引导语言-图像预训练，用于统一的视觉-语言理解和生成
@@ -10,21 +10,21 @@ tags: [BLIP, "Vision-Language model", "pre-training"]
 3. 发表日期：2022.2
 4. github: <https://github.com/salesforce/BLIP>
 
-## 该论文试图解决什么问题？
+### 该论文试图解决什么问题？
 
 目前已经存在的VLP（Vision-Language Pre-training）模型仅仅在理解类任务（understanding-based tasks）或者生成类任务（generation-based tasks）一方面表现优秀。主要解决问题有二。
 
 1. 提出BLIP，一个新的可以灵活迁移到理解类任务和生成类任务的VLP架构。
 2. (CapFilt): 网络爬取的数据有噪声，该方法可以提升数据的质量。
 
-## Key Contributions
+### Key Contributions
 
 1. 提出MED（ultimodal mixture of Encoder-Decoder）架构: 可以有效的多任务预训练和迁移学习。 通过三个视觉-语言目标函数实现：imagetext contrastive learning, image-text matching, and imageconditioned language modeling.
 2. 提出CapFilt（Captioning and Filtering）方法: 从有噪声的数据训练。captioner模块：输入网络爬取的图片，输出合成的文本描述（caption 任务）， filter模块L：从合成的图像文本对和合成的图像文本对中删除质量差的数据（noisy captions）.
 
-## Method
+### Method
 
-### 模型结构
+#### 模型结构
 
 ![BLIP网络结构](/papers_blip/blip-1.png)
 
@@ -36,7 +36,7 @@ tags: [BLIP, "Vision-Language model", "pre-training"]
 2. Image-grounded text encoder: 通过cross-attention进入视觉信息
 3. Image-grounded text decoder: 用于生成任务
 
-### 预训练目标函数
+#### 预训练目标函数
 
 1. Image-Text Contrastive Loss (ITC)
    作用：视觉特征空间与文本特征空间对齐（CLIP思想）
@@ -48,7 +48,7 @@ tags: [BLIP, "Vision-Language model", "pre-training"]
    作用：给定图片生成描述
    实现方式：交叉熵
 
-### CapFilt
+#### CapFilt
 
 ![CapFilt示意图](/papers_blip/blip-2.png)
 
@@ -60,9 +60,9 @@ filter: 使用LM目标函数
 
 finetune使用的是coco数据集
 
-## Experiments
+### Experiments
 
-### CapFilt相关的实验
+#### CapFilt相关的实验
 
 + captioner和filter一起使用效果更好
   ![CapFilt实验](/papers_blip/blip-3.png)
@@ -75,7 +75,7 @@ finetune使用的是coco数据集
 + captioner和filter参数是否共享
   ![CapFilt参数是否共享](/papers_blip/blip-5.png)
 
-### 与SOTA模型比较
+#### 与SOTA模型比较
 
 + 图像-文本召回
   ![图像-文本召回](/papers_blip/blip-6.png)
