修改markdown公式显示问题，以及修改日期

--- a/content/posts/basic/基础数学/关于变换.md
+++ b/content/posts/basic/基础数学/关于变换.md
@@ -7,7 +7,6 @@ categories:
     - "数学"
 tags: [变换]
 author: "pan"
-
 ---
 
 做图像处理或者数据增强的过程中，经常需要用得各种变换来处理图片。本文详细的说明了**线性变换、仿射变换、透视变换**的定义、几何意义、学习表达。重点给出透视变换的计算过程，并给出python实现代码。经验证和opencv的结果是一样的。
@@ -58,11 +57,14 @@ $Y = AX+b$
 其中 **A表示线性变换，b表示平移** 。A,b合在一起就可以表示一个仿射变换
 上式可以写如下两个形式，用矩阵的方式方便计算
 1、
-$$Y = [A|b]*\left[\begin{matrix}X\\1 \end{matrix}\right]$$
+
+$$Y = [A|b]*\left[\begin{matrix}X\\\\1 \end{matrix}\right]$$
+
+
 2、
 $$
-\left[\begin{matrix}Y\\1 \end{matrix}\right] = 
-\left[\begin{matrix}A & b \\0 & 1 \end{matrix}\right] * \left[\begin{matrix}X\\1 \end{matrix}\right]
+\left[\begin{matrix}Y\\\\1 \end{matrix}\right] = 
+\left[\begin{matrix}A & b \\\\0 & 1 \end{matrix}\right] * \left[\begin{matrix}X\\\\1 \end{matrix}\right]
 $$
 
 在二维平面上，三个点就可以确定一个平面。我们用opencv来简单是实现一下方式变换的效果。
