add new post:I-JEPA

--- a/content/posts/papers/2023-05-15-BLIP2.md
+++ b/content/posts/papers/2023-05-15-BLIP2.md
@@ -5,14 +5,14 @@ categories: [paper]
 tags: [BLIP2, "Vision-Language model", "pre-training", "llm", "multi-task"]
 ---
 
-1. Title: BLIP-2: 用冻住的图像编码模型和大语言模型引导文本-图像预训练
+1. Title: BLIP-2: 用冻结的图像编码模型和大语言模型引导文本-图像预训练
 2. 作者: Junnan Li Dongxu Li Silvio Savarese Steven Hoi；Salesforce Research
 3. 发表日期：2023.5
 4. github: <https://github.com/salesforce/LAVIS/tree/main/projects/blip2>
 
 ### 该论文试图解决什么问题？
 
-预训练视觉-语言模型代价变的非常高昂，由于端到端的训练。这篇论文提出了一个通用的、有效的预训练策略：BLIP-2，其从现成的冻住的图像编码模型和冻住的大语言模型引导视觉-语言（vision-language）的预训练。该方法解决的跨模态对齐(视觉模型和LLM)问题。
+由于端到端的训练, 预训练视觉-语言模型代价变的非常高昂。这篇论文提出了BLIP-2, 一个通用的、有效的预训练策略: 其从现成的冻结的视觉模型和冻结的大语言模型，引导视觉-语言（vision-language）模型的预训练。该方法解决的跨模态对齐(视觉模型和LLM)问题。
 
 ### 应用：Instructed Zero-shot Image-to-Text Generation
 
@@ -33,7 +33,7 @@ tags: [BLIP2, "Vision-Language model", "pre-training", "llm", "multi-task"]
 
 两阶段策略，预训练一个轻量级Q-Former模块去连接两种模态的gap。
 
-第一阶段：从一个frozen image encoder中引导visionlanguage表示学习（representation learning）。
+第一阶段：从一个frozen image encoder中引导vision-language表示学习（representation learning）。
 
 第二阶段：从一个frozen LLM中引导vision-to-language的生成学习（generative learning）
 
