add new post: ImageBind

--- a/content/posts/machine learning/梯度下降优化方法概述.md
+++ b/content/posts/machine learning/梯度下降优化方法概述.md
@@ -4,9 +4,10 @@ title: "梯度下降优化方法概述"
 date: 2021-11-28
 # menu: main
 categories: [机器学习]
-tags: [梯度下降]
+tags: [梯度下降, 优化方法]
 ---
 
+[Updated on 2023-06-24: add AdamW](#AdamW)
 
 梯度下降是优化神经网络和机器机器学习算法的首选优化方法。本文重度参考[SEBASTIAN RUDER](https://ruder.io/optimizing-gradient-descent/)的文章。对于英文比较好的同学请直接阅读原文。本文只为个人的学习总结，难免有所欠缺和不足。
 
@@ -43,20 +44,18 @@ $\theta = \theta - \eta \cdot \nabla_\theta J( \theta; x^{(i:i+n)}; y^{(i:i+n)})
 $g_t = \nabla_\theta J( \theta)$
 
 (2)根据历史梯度计算一阶和二阶动量(二阶指的是梯度的平方)
-$
-m_t = \phi(g_1, g_2, ..., g_t) \\
-v_t = \psi(g_1, g_2, ..., g_t)
-$
+
+$$m_t = \phi(g_1, g_2, ..., g_t)$$
+$$v_t = \psi(g_1, g_2, ..., g_t)$$
 
 (3)更新模型参数
 $\theta_{t+1}=\theta_t-\frac{1}{\sqrt{v_t+\epsilon}}m_t$
 
 ## 2.1 动量法（Momentum）
 
-$
-v_t = \gamma v_{t-1} + \eta \nabla_\theta J( \theta) \\
-\theta = \theta - v_t
-$
+$$v_t = \gamma v_{t-1} + \eta \nabla_\theta J( \theta) $$
+$$ \theta = \theta - v_t
+$$
 
 做一个简单的推导。
 ![image.png](/梯度下降优化方法概述/8596800-ede037f589c8bdd1.png)
@@ -66,42 +65,40 @@ $
 ## Adagrad
 SGD、SGD-M都是相同的学习率更新参数。但是对于高频出现的特征我们希望用更小的学习率更新参数。**所以提出了自适应梯度更新方法Adagrad**。Adagrad对于低频出现的特征我们希望用更大的学习率更新参数。所以在稀疏数据的场景下Adagrad表现较好。Adagrad中的ada是adapt（自适应）的意思
 
-$
+$$
 \theta_{t+1, i} = \theta_{t, i} - \dfrac{\eta}{\sqrt{G_{t, ii} + \epsilon}} \cdot g_{t, i}
-$
+$$
 
 其中$G_{t,ii}$表示$\theta$过去所有时刻**梯度平方和**，注意分母是带根号的，不带根号效果会很差。
 缺点：分母会越来越大，导致最后的学习率是无穷小的值。这样模型就学不到东西了。
 
 ## RMSprop
 
-$
-E[g^2]_t = 0.9E[g^2]_{t-1} + 0.1g^2_t \\
-\theta_{t+1} = \theta_{t} - \dfrac{\eta}{\sqrt{E[g^2]_t} + \epsilon} g_t
-$
+$$ E[g^2]_{t} =  0.9E[g^2]\_{t-1}+ 0.1g^2_t$$
+
+$$ \theta_{t+1} = \theta_{t} - \dfrac{\eta}{\sqrt{E[g^2]_t} + \epsilon} g_t$$
+
 从表达是可以看出RMSprop是为了解决Adagrad中学习率会越来越小的问题。RMSprop处理使用之前的累计额梯度平方和还使用了当前时刻的梯度平方。这样就会防止学习率越来越小。
 
 ## Adam
 
 Adam可以认为是RMSprop和Momentum的结合。
 
-$
-m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t \\
-v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2
-$
+$$m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t$$
+$$ v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2 $$
 
 其中$m_0=0, v_0=0$
 由于$\beta_1, \beta_2$都是趋向于1的数，所以开始时刻$m_t,v_t$趋向于0的一端，导致一开始的时候梯度很小。所以作者Adam对上面的公式做了偏差矫正（bias-corrected）。公式如下
 
-$\hat{m}_t = \dfrac{m_t}{1 - \beta^t_1} \\
-\hat{v}_t = \dfrac{v_t}{1 - \beta^t_2}$
+$$\hat{m}_t = \dfrac{m_t}{1 - \beta^t_1}$$
+$$\hat{v}_t = \dfrac{v_t}{1 - \beta^t_2}$$
 
 即在原来的基础上除以$1-\beta^t$。 那么$\hat{m}_0=g_1$, 随着t的变大，$1-\beta^t$趋向于1。即$\hat{m}_t$趋向于$m_t$。
 最终参数更新表达如下：
 
-$
+$$
 \theta_{t+1} = \theta_{t} - \dfrac{\eta}{\sqrt{\hat{v}_t} + \epsilon} \hat{m}_t
-$
+$$
 
 **所以理论上Adam优化方法是比较好的优化方法。即加了动量，针对不同参数又使用了不同的学习率。当时在目前很多开源的代码中，很多了大佬还是使用了SGD-M方法，并没有使用Adam。关于这一点欢迎大家一起讨论。**
 
@@ -110,3 +107,5 @@ $
 ![contours_evaluation_optimizers.gif](/梯度下降优化方法概述/8596800-b9e30e118b426b74.gif)
 
 ![v2-4a3b4a39ab8e5c556359147b882b4788_b.gif](/梯度下降优化方法概述/8596800-66130952db79139d.gif)
+
+## AdamW
