--- a/content/posts/papers/2023-05-22-BLIP.md
+++ b/content/posts/papers/2023-05-22-BLIP.md
@@ -12,7 +12,8 @@ tags: [BLIP, "Vision-Language model", "pre-training", "multi-task"]
 
 ### 该论文试图解决什么问题？
 
-目前已经存在的VLP（Vision-Language Pre-training）模型仅仅在理解类任务（understanding-based tasks）或者生成类任务（generation-based tasks）一方面表现优秀。主要解决问题有二。
+目前已经存在的VLP（Vision-Language Pre-training）模型仅仅在理解类任务（understanding-based tasks）或者生成类任务（generation-based tasks）其中一方面表现优秀。
+本文主要解决问题有二。
 
 1. 提出BLIP，一个新的可以灵活迁移到理解类任务和生成类任务的VLP架构。
 2. (CapFilt): 网络爬取的数据有噪声，该方法可以提升数据的质量。
@@ -20,7 +21,7 @@ tags: [BLIP, "Vision-Language model", "pre-training", "multi-task"]
 ### Key Contributions
 
 1. 提出MED（ultimodal mixture of Encoder-Decoder）架构: 可以有效的多任务预训练和迁移学习。 通过三个视觉-语言目标函数实现：imagetext contrastive learning, image-text matching, and imageconditioned language modeling.
-2. 提出CapFilt（Captioning and Filtering）方法: 从有噪声的数据训练。captioner模块：输入网络爬取的图片，输出合成的文本描述（caption 任务）， filter模块L：从合成的图像文本对和合成的图像文本对中删除质量差的数据（noisy captions）.
+2. 提出CapFilt（Captioning and Filtering）方法: 从有噪声的数据训练。captioner模块：输入网络爬取的图片，输出合成的文本描述（caption 任务）， filter模块：从合成的图像文本对中删除质量差的数据（noisy captions）.
 
 ### Method
 
@@ -52,11 +53,11 @@ tags: [BLIP, "Vision-Language model", "pre-training", "multi-task"]
 
 ![CapFilt示意图](/papers_blip/blip-2.png)
 
-先用网络爬取的数据和人类标注的数据集预训练模型。然后**各自的（指参数不共享）**的finetune captioner模块和filter模块。
+先用网络爬取的数据和人类标注的数据集预训练模型。然后**各自**(指参数不共享)的finetune captioner模块和filter模块。
 
-captioner: 使用ITC and ITM目标函数
++ captioner: 使用LM目标函数
 
-filter: 使用LM目标函数
++ filter: 使用ITC和ITM目标函数
 
 finetune使用的是coco数据集
 
