--- a/content/posts/papers/2023-10-15-MMICL.md
+++ b/content/posts/papers/2023-10-15-MMICL.md
@@ -32,7 +32,10 @@ LLM可以通过in-context learning利用背景信息和任务信息，然而，V
 
 ### 1.2 Key Contributions
 
-
+1. 提出方法MMICL， 可以有效的处理多模输入（包括多张图片的关系和文本到图片的指代）
+2. 提出新的上下文方案（an extra image declaration section and image proxy tokens）增强VLM的上写文学习能力
+3. 构建MIC（Multi-modal In-Context）数据集
+此外，MMICL可以缓解语言的偏见（language bias），广泛语境下language bias会导致幻觉问题
 
 ## Method
 
