--- a/content/posts/machine learning/机器学习基础之反向传播.md
+++ b/content/posts/machine learning/机器学习基础之反向传播.md
@@ -23,13 +23,13 @@ $out_{o1}, out_{o2}$: 模型预测的结果
 
 本例中激活函数用$sigmod(x)=\frac{1}{1+e^{-x}}$; 
 
-损失函数用$L_2=\frac{1}{2}*(target-output)^2$
+损失函数用$L_2=\frac{1}{2} \times (target-output)^2$
 
 ## 前向传播
 
 1. 隐藏层计算
 
-$net_{h1}=w_1*i_1+w_2*i_2+b_1\\=0.15*0.05+0.2*0.1+0.35=0.3775$
+$net_{h1}=w_1 \times i_1+w_2 \times i_2+b_1=0.15 \times 0.05+0.2 \times 0.1+0.35=0.3775$
 
 $out_{h1}=sigmod(net_{h1})=\frac{1}{1+e^{-0.3775}}=0.593269992$
 
@@ -38,7 +38,7 @@ $out_{h2}=0.596884378$
 
 2. 输出层计算
 
-$net_{o1}=w_5*out_{h1}+w_6*out_{h2}+b_2\\=0.4*0.593269992+0.45*0.596884378=1.105905967$
+$net_{o1}=w_5 \times out_{h1}+w_6m \times out_{h2}+b_2\\=0.4 \times 0.593269992+0.45 \times 0.596884378=1.105905967$
 
 $out_{o1}=sigmod(net_{o1})=0.75136507$
 
@@ -54,17 +54,20 @@ $out_{o2}=0.772928465$
 
 总的损失$E_{total}=E_{o1}+E_{o2}$,其中
 
-$E_{o1}=\frac{1}{2}(target_{o1}-out_{o1})^2=\frac{1}{2}(0.01-0.75136507)^2=0.274811083\\
-E_{o2}=\frac{1}{2}(target_{o2}-out_{o2})^2=0.023560026\\
-E_{total}=E_{o1}+E_{o2}=0.274811083+0.023560026=0.298371109
-$
+$$\begin{align} E_{o1} &=\frac{1}{2}(target_{o1}-out_{o1})^2 \\\
+&= \frac{1}{2}(0.01-0.75136507)^2=0.274811083 \end{align}$$
+
+$$E_{o2}=\frac{1}{2}(target_{o2}-out_{o2})^2=0.023560026$$
+
+$$E_{total}=E_{o1}+E_{o2}=0.274811083+0.023560026=0.298371109
+$$
 
 1. 计算参数$w_5$的梯度
 根据链式法则，公式如下：
 
-$\frac{\partial E_{total}}{\partial w_5}=\frac{\partial E_{total}}{\partial out_{o1}}*\frac{\partial out_{o1}}{\partial net_{o1}}*\frac{\partial net_{o1}}{\partial w_5}$
+$\frac{\partial E_{total}}{\partial w_5}=\frac{\partial E_{total}}{\partial out_{o1}} \times \frac{\partial out_{o1}}{\partial net_{o1}} \times \frac{\partial net_{o1}}{\partial w_5}$
 
-$\frac{\partial E_{total}}{\partial out_{o1}}=(target_{o1}-out_{o1})*-1=-(0.01-0.75136507)=0.74136507$
+$\frac{\partial E_{total}}{\partial out_{o1}}=(target_{o1}-out_{o1}) \times -1=-(0.01-0.75136507)=0.74136507$
 
 $\frac{\partial out_{o1}}{\partial net_{o1}}=out_{o1}*(1-out_{o1})=0.75136507(1-0.75136507)=0.186815602$
 
@@ -101,17 +104,19 @@ $\frac{\partial E_{o2}}{\partial out_{h1}}=−0.038098236*0.5=-0.019049119$
 $\frac{\partial E_{total}}{\partial out_{h1}}=\frac{\partial E_{o1}}{\partial out_{h1}}+\frac{\partial E_{o2}}{\partial out_{h1}}=0.055399425+(-0.019049119)=0.036350306$
 
 最终
-$\frac{\partial E_{total}}{\partial w_1}=\frac{\partial E_{total}}{\partial out_{h1}}*\frac{\partial out_{h1}}{\partial net_{h1}}*\frac{\partial net_{h1}}{\partial net_{w_1}}=0.036350306*out_{h1}*(1-out_{h1})*i_1=0.036350306*0.593269992*(1-0.593269992)*0.05=0.000438568$
+
+$\frac{\partial E_{total}}{\partial w_1}=\frac{\partial E_{total}}{\partial out_{h1}} \times \frac{\partial out_{h1}}{\partial net_{h1}} \times \frac{\partial net_{h1}}{\partial net_{w_1}}=0.036350306 \times out_{h1} \times (1-out_{h1}) \times i_1=0.036350306 \times \times0.593269992 \times (1-0.593269992) \times 0.05=0.000438568$
 
 ## 补充说明
 
 + sigmod求导推导
 
-$f(x) = \frac{1}{1+e^-x}\\
-\dot{f(x)}=-\frac{1}{(1+e^-x)^2}*e^{-x}*-1=\frac{1}{(1+e^-x)}*\frac{e^{-x}}{(1+e^-x)}=f(x)*(1-f(x))$
+$f(x) = \frac{1}{1+e^-x}$
+
+$\dot{f(x)}=-\frac{1}{(1+e^-x)^2} \times e^{-x} \times -1=\frac{1}{(1+e^-x)} \times \frac{e^{-x}}{(1+e^-x)}=f(x) \times (1-f(x))$
 
 + 分类任务，输出层损失
-   
+
 以上是以sigmod激活，MSE损失的反向传播（回归问题）；如果已经softmax激活，交叉熵顺序的反向传播如何呢（分类问题）？
   如何计算分类问题的`输出层损失`，符号定义如下
   1. $z_i$: 网络最后未经过激活的输出
