--- a/content/posts/basic/基础数学/概率基础.md
+++ b/content/posts/basic/基础数学/概率基础.md
@@ -7,10 +7,21 @@ tags: [MLE, MAP]
 author: pan
 ---
 
+# 概率分布（Probability distribution）
+
+对于离散随机变量，概率分布一般指某个事件发生的概率；
+对于连续随机变量，概率分布（Probability distribution）即可以用概率密度函数（probability density function）也可以累积分布函数（cumulative distribution function）（也称分布函数）描述。
+
+
+
 # Maximum likelihood estimation（MLE）
 
 AA
 
 # Maximum a posteriori estimation(MAP)
 
-A
+
+
+# 参考文献
+
+1. [Probability distribution](https://en.wikipedia.org/wiki/Probability_distribution)
