1. add MLLM调研报告 2. update VAE 3. add NaVIT 4. add ELBO

--- a/content/posts/papers/2023-05-15-BLIP2.md
+++ b/content/posts/papers/2023-05-15-BLIP2.md
@@ -41,7 +41,7 @@ tags: [BLIP2, "Vision-Language model", "pre-training", "llm", "multi-task"]
 
 ![Q-Former结构和BLIP2第一阶段表示学习示意图](/papers_blip2/blip2-2.png)
 
-**note: Q-Former的输出维度Z(32*768)远远小于VIT-L/14(257*1024)的维度**
+**note: Q-Former的输出维度Z(32\*768)远远小于VIT-L/14(257\*1024)的维度**
 注意三个目标self-attention mask的不同
 
 Q-Former作用：从图片中提取与文本最相关的特征
