--- a/content/posts/papers/2023-07-10-OvarNet.md
+++ b/content/posts/papers/2023-07-10-OvarNet.md
@@ -1,7 +1,7 @@
 ---
 title: "OvarNet:Towards Open-vocabulary Object Attribute Recognition"
 date: 2023-07-10T15:30:40+08:00
-draft: True
+draft: false
 categories: ["paper"]
 tags: ["Open Vocabulary", "OvarNet", "Attribute Recognition"]
 author: pan
