--- a/content/posts/machine learning/位置编码.md
+++ b/content/posts/machine learning/位置编码.md
@@ -109,6 +109,8 @@ $$e^{ix} = cos(x)+i\ sin(x)$$
     $$
     其中$p_k,p_v$可以是可学习的，也可以三角的。
 
+**注：后续很多相对位置编码的工作，相对位置编码都只加在注意力矩上，不加value上了，RoPE也是一样。**
+
 ## RoPE
 
 旋转式位置编码（Rotary Position Embedding，RoPE），是苏剑林在2021年就构想出的位置编码，**这是一种配合Attention机制能达到“绝对位置编码的方式实现相对位置编码”的设计**。其来源以及详细的推导证明见参考文献[让研究人员绞尽脑汁的Transformer位置编码](https://kexue.fm/archives/8130)和[Transformer升级之路：2、博采众长的旋转式位置编码](https://kexue.fm/archives/8265)。
@@ -258,7 +260,7 @@ $$
 
 ### 实际应用中PoRE
 
-上面的证明我们都是加上word embedding的维度是2，但是实际应用中，word embedding都是高维的，比如512,768等。
+上面的证明我们都是假设word embedding的维度是2，但是实际应用中，word embedding都是高维的，比如512,768等。
 
 所以我们只需要对高维的word embedding进行两两分组（word embedding的维度都是偶数）就可以了。所以一般形式的PoRE如下图中红色框中的矩阵。
 
