--- a/content/posts/papers/2023-09-24-Flamingo.md
+++ b/content/posts/papers/2023-09-24-Flamingo.md
@@ -3,7 +3,7 @@ title: "Flamingo"
 date: 2023-09-24T17:40:40+08:00
 draft: False
 categories: [paper]
-tags: []
+tags: [VLM]
 author: pan
 ---
 1. Title: Flamingo: a Visual Language Model for Few-Shot Learning
