--- a/content/posts/papers/2023-10-15-MMICL.md
+++ b/content/posts/papers/2023-10-15-MMICL.md
@@ -3,7 +3,7 @@ title: "MMICL"
 date: 2023-10-15T17:58:18+08:00
 draft: false
 categories: [paper]
-tags: []
+tags: [VLM]
 author: pan
 ---
 1. Title:
